<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlCamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_capture_text">Capture</string>
    <string name="btn_switch_camera_text">Switch</string>
    <string name="btntxt_direct">Direct</string>
    <string name="btntxt_opengl_java">Java</string>
    <string name="btntxt_opengl_cpp">C++</string>

</resources>
