<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_switch_camera"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonSwitchCameraClick"
            android:text="@string/btn_switch_camera_text" />

        <Button
            android:id="@+id/button_capture"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonCaptureClick"
            android:text="@string/btn_capture_text" />

        <Button
            android:id="@+id/button_direct"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonDirectClick"
            android:text="@string/btntxt_direct" />

        <Button
            android:id="@+id/button_opengl_cpp"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonOpenGLCppClick"
            android:text="@string/btntxt_opengl_cpp" />

        <Button
            android:id="@+id/button_opengl_java"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonOpenGLJavaClick"
            android:text="@string/btntxt_opengl_java" />
    </LinearLayout>

</LinearLayout>